[metadata]
name = turtles
summary = Extendible log parsing and performance analysis tool
description-file = README.md
author = Timothy R. Chavez
author-email = timrchavez@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    turtles = turtles.turtles:main
